# VAPack-Publish

./: .gitignore  LICENSE  README.md  calculation_data.xml  count_electrons.sh  extract.py  extract_lib.py  hashtime.py  importcalc.py  incar.py  inkit.py  poskit.py  poskit_lib.py  potkit.py  pyproject.toml  vapack.py  vapack_analyze.py  vapack_lib.py  vapack_tool.py  vasp-data.py  vasp_parsers.py  vasphash.py  vasptypes.py  vasptypes_extension.py  vtk.py  vtklib.py  xml_db.py  xmldb_lib.py
docker/: Dockerfile  entry.sh  environment.yml
extra/templates/: md_npt  md_nve_csvr  md_nvt_csvr  partial_charge  small_output
extra/utilities/: plot.sh
src/: vapack_cli.py
src/vapack/: analyze.py  extensions.py  rec_pseudopotentials.py  types.py
templates/: electronic_fine  electronic_fine.yaml  ion_freeze.yaml  md_nph  md_nve  md_nvt  molecule_so.yaml  no_wave.yaml  nph_md.yaml  npt.yaml  nve_anderson.yaml  one-shot  one_shot  optimization_borah.yaml  parameter_template.yaml  structure_optimize_fine  structure_optimize_fine.yaml
templates/incar/: bader_charge  molecule_structure_optimize  no_chgcar  no_wavecar  nph_md  npt_md  nve_anderson  nvt_nose-hoover  opt_borah
templates/yaml/: bader_charge.yaml  no_chg.yaml  nve_md.yaml  nvt_md.yaml  nvt_nose-hoover.yaml  opt_borah.yaml  parameter_template.yaml  scf.yaml
testing/: test_INCAR  test_parsers.py
utilities/: package.sh  plot.awk  plot.sh
vapack/: analyze.py  extensions.py
