[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vapack"
version = "0.2.4"
authors = [
    { name = "Ian Kerby", email = "iankerby@u.boisestate.edu" },
]
dependencies = [
    "numpy",
    "click",
    "plotly"
]

[project.scripts]
vapack = "vapack_cli:cli"
